--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
   compile 'com.google.guava:guava:15.0'
   compile 'commons-cli:commons-cli:1.2'
+  compile 'org.fusesource.jansi:jansi:1.11'
   testCompile 'com.github.stefanbirkner:system-rules:1.3.1'
   testCompile 'junit:junit:4.11'
 }
