Add 'check' to default gradle tasks.
Also fix regression test (test was out of date with code).

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java'
 
-defaultTasks 'clean', 'assemble'
+defaultTasks 'clean', 'check', 'assemble'
 
 sourceCompatibility = 1.7
 version = '1.0.0'
