mavenLocal() instead of hard-coded path

--- a/build.gradle
+++ b/build.gradle
@@ -89,9 +89,6 @@ publishing {
         }
     }
     repositories {
-        maven {
-            // Should eventually change, e.g. http://my.org/repo
-            url "$buildDir/repo"
-        }
+        mavenLocal()
     }
 }
