--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile 'com.google.code.findbugs:annotations:2.0.3'
     compile 'commons-cli:commons-cli:1.2'
     compile 'org.fusesource.jansi:jansi:1.11'
+    compile 'org.pegdown:pegdown:1.4.2'
 
     testCompile 'commons-io:commons-io:2.4'
     testCompile 'com.github.stefanbirkner:system-rules:1.3.1'
