--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ defaultTasks 'clean', 'check', 'assemble'
 
 group = 'com.selesse'
 version = '1.1.1'
+sourceCompatibility = 1.6
 
 repositories {
     mavenCentral()
