--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,23 @@
 apply plugin: 'build-announcements'
-apply plugin: 'java'
 apply plugin: 'findbugs'
-apply plugin: 'maven-publish'
+apply plugin: 'java'
+apply plugin: 'nexus'
 
 defaultTasks 'clean', 'check', 'assemble'
 
 group = 'com.selesse'
 version = '1.3.0'
 sourceCompatibility = 1.6
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.7.1'
+    }
+}
 
 repositories {
     mavenCentral()
@@ -25,7 +35,7 @@ dependencies {
     testCompile 'junit:junit:4.11'
 }
 
-task release(dependsOn: ['clean', 'check', 'assemble', 'javadocJar', 'sourceJar']) << {
+task release(dependsOn: ['clean', 'check', 'assemble', 'javadocJar', 'sourcesJar']) << {
     out.println "Releasing jxlint-$version"
 }
 
@@ -55,30 +65,34 @@ tasks.withType(FindBugs) {
     }
 }
 
-// Set up publishing info
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
+modifyPom {
+    project {
+        name 'jxlint'
+        description 'Framework for doing static analysis in Java'
+        url 'https://github.com/selesse/jxlint'
+        inceptionYear '2013'
 
-task sourceJar(type: Jar) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
+        scm {
+            url 'https://github.com/selesse/jxlint'
+            connection 'scm:https://selesse@github.com/selesse/jxlint.git'
+            developerConnection 'scm:git://github.com/selesse/jxlint.git'
+        }
 
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-            artifact(sourceJar) {
-                classifier = 'sources'
+        licenses {
+            license {
+                name 'MIT license'
+                url 'http://opensource.org/licenses/mit-license.php'
+                distribution 'repo'
             }
-            artifact(javadocJar) {
-                classifier = 'javadoc'
+        }
+
+        developers {
+            developer {
+                id 'selesse'
+                name 'Alex Selesse'
+                email 'alex@selesse.com'
             }
         }
     }
-    repositories {
-        mavenLocal()
-    }
 }
+
