--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'build-announcements'
 apply plugin: 'checkstyle'
 apply plugin: 'findbugs'
-apply plugin: 'java'
+apply plugin: 'groovy'
 apply plugin: 'nexus'
 
 defaultTasks 'clean', 'build'
@@ -24,12 +24,23 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    jettyVersion = '9.2.2.v20140723'
+}
+
 dependencies {
-    compile 'com.google.guava:guava:16.0.1'
+    compile localGroovy()
+
+    compile "org.eclipse.jetty:jetty-server:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-webapp:${jettyVersion}"
     compile 'com.google.code.findbugs:annotations:2.0.3'
+    compile 'com.google.guava:guava:16.0.1'
     compile 'commons-cli:commons-cli:1.2'
+    compile 'javax.servlet:javax.servlet-api:3.1.0'
     compile 'org.fusesource.jansi:jansi:1.11'
     compile 'org.pegdown:pegdown:1.4.2'
+
+    runtime "org.eclipse.jetty:jetty-jsp:${jettyVersion}"
 
     testCompile 'commons-io:commons-io:2.4'
     testCompile 'com.github.stefanbirkner:system-rules:1.3.1'
