--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'javax.servlet:javax.servlet-api:3.1.0'
     compile 'org.fusesource.jansi:jansi:1.11'
     compile 'org.pegdown:pegdown:1.4.2'
+    compile 'org.slf4j:slf4j-api:1.7.7'
 
     runtime "org.eclipse.jetty:jetty-jsp:${jettyVersion}"
 
