--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'org.fusesource.jansi:jansi:1.11'
     compile 'org.pegdown:pegdown:1.4.2'
     compile 'org.slf4j:slf4j-api:1.7.7'
+    compile 'org.apache.velocity:velocity:1.7'
 
     runtime "org.eclipse.jetty:jetty-jsp:${jettyVersion}"
 
