--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     compile 'com.google.code.findbugs:annotations:2.0.3'
     compile 'com.google.guava:guava:16.0.1'
     compile 'commons-cli:commons-cli:1.2'
-    compile 'javax.servlet:javax.servlet-api:3.1.0'
+    compile 'javax.servlet:servlet-api:2.5'
     compile 'org.fusesource.jansi:jansi:1.11'
     compile 'org.pegdown:pegdown:1.4.2'
     compile 'org.slf4j:slf4j-api:1.7.7'
