--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     testCompile 'com.github.stefanbirkner:system-rules:1.3.1'
     testCompile 'commons-io:commons-io:2.4'
     testCompile 'org.easytesting:fest-assert-core:2.0M10'
+    testCompile 'org.mockito:mockito-all:1.8.4'
 
     testRuntime 'ch.qos.logback:logback-classic:1.1.2'
 }
