--- a/jxlint/jxlint.gradle
+++ b/jxlint/jxlint.gradle
@@ -7,11 +7,8 @@ ext {
 
 dependencies {
     compile "org.eclipse.jetty:jetty-webapp:${jettyVersion}"
-    compile 'com.google.code.findbugs:annotations:2.0.3'
-    compile 'com.google.guava:guava:18.0'
     compile 'commons-cli:commons-cli:1.2'
     compile 'org.apache.velocity:velocity:1.7'
-    compile 'org.fusesource.jansi:jansi:1.11'
     compile 'org.pegdown:pegdown:1.4.2'
     compile 'org.slf4j:slf4j-api:1.7.7'
 
@@ -19,10 +16,6 @@ dependencies {
 
     testCompile 'com.github.stefanbirkner:system-rules:1.3.1'
     testCompile 'commons-io:commons-io:2.4'
-    testCompile 'org.easytesting:fest-assert-core:2.0M10'
-    testCompile 'org.mockito:mockito-all:1.8.4'
-
-    testRuntime 'ch.qos.logback:logback-classic:1.1.2'
 }
 
 task release(dependsOn: ['clean', 'build', 'javadocJar', 'sourcesJar']) << {
@@ -51,6 +44,13 @@ jar {
 findbugs {
     toolVersion = '2.0.3'
     excludeFilter = file("$rootDir/config/findbugs/excludeFilter.xml")
+}
+
+tasks.withType(FindBugs) {
+    reports {
+        xml.enabled = false
+        html.enabled = true
+    }
 }
 
 modifyPom {
