Add rule "FunctionsStartingWithTestAreTests"

--- a/jxlint-impl/jxlint-impl.gradle
+++ b/jxlint-impl/jxlint-impl.gradle
@@ -6,4 +6,5 @@ dependencies {
     compile project(":jxlint")
 
     compile 'ch.qos.logback:logback-classic:1.1.2'
+    compile 'com.google.code.javaparser:javaparser:1.0.11'
 }
