--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ subprojects {
         compile 'org.fusesource.jansi:jansi:1.11'
         compile 'org.slf4j:slf4j-api:1.7.7'
 
+        testCompile 'junit:junit:4.11'
         testCompile 'org.easytesting:fest-assert-core:2.0M10'
         testCompile 'org.mockito:mockito-all:1.8.4'
 
