--- a/jxlint/jxlint.gradle
+++ b/jxlint/jxlint.gradle
@@ -1,9 +1,7 @@
 apply plugin: 'findbugs'
 apply plugin: 'nexus'
 
-ext {
-    jettyVersion = '8.1.15.v20140411'
-}
+ext.jettyVersion = '8.1.15.v20140411'
 
 dependencies {
     compile "org.eclipse.jetty:jetty-webapp:${jettyVersion}"
@@ -16,6 +14,11 @@ dependencies {
 
     testCompile 'com.github.stefanbirkner:system-rules:1.3.1'
     testCompile 'commons-io:commons-io:2.4'
+
+    // JS & CSS dependencies
+    compile 'org.webjars:bootstrap:3.1.0'
+    compile 'org.webjars:prettify:4-Mar-2013'
+    compile 'org.webjars:tablesorter:2.15.5'
 }
 
 task release(dependsOn: ['clean', 'build', 'javadocJar', 'sourcesJar']) << {
