--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ subprojects {
         compile 'org.slf4j:slf4j-api:1.7.7'
 
         testCompile 'junit:junit:4.11'
-        testCompile 'org.easytesting:fest-assert-core:2.0M10'
+        testCompile 'org.assertj:assertj-core:1.7.0'
         testCompile 'org.mockito:mockito-all:1.8.4'
 
         testRuntime 'ch.qos.logback:logback-classic:1.1.2'
