--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ subprojects {
 
         testCompile 'junit:junit:4.11'
         testCompile 'org.assertj:assertj-core:1.7.0'
+        testCompile 'org.jsoup:jsoup:1.8.1'
+        testCompile 'org.glassfish.jersey.core:jersey-client:2.13'
         testCompile 'org.mockito:mockito-all:1.8.4'
 
         testRuntime 'ch.qos.logback:logback-classic:1.1.2'
