Add simple assertions for LintError

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 include 'jxlint'
 include 'jxlint-impl'
+include 'assertj-jxlint'
 
 rootProject.children.each { project ->
     String fileBaseName = project.name.replaceAll("\\p{Upper}") { "-${it.toLowerCase()}" }
