Make index content driven by Markdown, increase screen width

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ title: selesse.com/jxlint/
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://selesse.com/jxlint/" # the base hostname & protocol for your site
 permalink: /:year/:month/:day/:title.html
+
+markdown: redcarpet
