--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 include 'jxlint'
 include 'jxlint-impl'
-include 'assertj-jxlint'
+include 'jxlint-assertj'
 
 rootProject.children.each { project ->
     String fileBaseName = project.name.replaceAll("\\p{Upper}") { "-${it.toLowerCase()}" }
