Don't fail if javadoc throws an error

--- a/jxlint/jxlint.gradle
+++ b/jxlint/jxlint.gradle
@@ -98,3 +98,7 @@ nexus {
     repositoryUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2'
     snapshotRepositoryUrl = 'https://oss.sonatype.org/content/repositories/snapshots'
 }
+
+javadoc {
+    failOnError = false
+}
