--- a/jxlint/jxlint.gradle
+++ b/jxlint/jxlint.gradle
@@ -1,14 +1,12 @@
 apply plugin: 'findbugs'
 apply plugin: 'com.bmuschko.nexus'
 
-ext.jettyVersion = '8.1.15.v20140411'
-
 dependencies {
     compile "org.eclipse.jetty:jetty-webapp:${jettyVersion}"
-    compile 'commons-cli:commons-cli:1.2'
+    compile 'commons-cli:commons-cli:1.3.1'
     compile 'org.apache.velocity:velocity:1.7'
-    compile 'org.pegdown:pegdown:1.4.2'
-    compile 'org.slf4j:slf4j-api:1.7.7'
+    compile 'org.pegdown:pegdown:1.6.0'
+    compile "org.slf4j:slf4j-api:${slf4jVersion}"
 
     runtime "org.eclipse.jetty:jetty-jsp:${jettyVersion}"
 
@@ -45,7 +43,7 @@ jar {
 }
 
 findbugs {
-    toolVersion = '3.0.1'
+    toolVersion = findbugsVersion
     excludeFilter = file("$rootDir/config/findbugs/excludeFilter.xml")
 }
 
