--- a/jxlint-assertj/jxlint-assertj.gradle
+++ b/jxlint-assertj/jxlint-assertj.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.bmuschko.nexus'
+apply from: rootProject.file('gradle/maven-publish.gradle')
 
 dependencies {
     compile project(':jxlint')
@@ -9,41 +9,7 @@ modifyPom {
     project {
         name 'jxlint-assertj'
         description 'Testing library for the jxlint framework'
-        url 'https://github.com/selesse/jxlint'
         inceptionYear '2014'
-
-        scm {
-            url 'https://github.com/selesse/jxlint'
-            connection 'scm:https://selesse@github.com/selesse/jxlint.git'
-            developerConnection 'scm:git://github.com/selesse/jxlint.git'
-        }
-
-        licenses {
-            license {
-                name 'MIT license'
-                url 'http://opensource.org/licenses/mit-license.php'
-                distribution 'repo'
-            }
-        }
-
-        developers {
-            developer {
-                id 'selesse'
-                name 'Alex Selesse'
-                email 'alex@selesse.com'
-            }
-        }
     }
 }
 
-extraArchive {
-    javadoc = true
-    sources = true
-    tests = false
-}
-
-nexus {
-    sign = true
-    repositoryUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2'
-    snapshotRepositoryUrl = 'https://oss.sonatype.org/content/repositories/snapshots'
-}
