--- a/jxlint-impl/jxlint-impl.gradle
+++ b/jxlint-impl/jxlint-impl.gradle
@@ -7,6 +7,7 @@ dependencies {
 
     compile 'ch.qos.logback:logback-classic:1.1.2'
     compile 'com.github.javaparser:javaparser-core:3.1.4'
+    testCompile project(':jxlint-assertj')
 }
 
 ext.rulesFile = new File(projectDir, "RULES.md")
