--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ include 'jxlint-cli'
 include 'jxlint-impl'
 include 'jxlint-assertj'
 include 'jxlint-maven'
+include 'jxlint-gradle'
 
 rootProject.children.each { project ->
     String fileBaseName = project.name.replaceAll("\\p{Upper}") { "-${it.toLowerCase()}" }
